vlib/v/parser/tests/option_sum_type_return_err.vv
fn option_sumtype() ?string | int {
	return 0
}
